# plugin-freedom-system

./: .gitignore  CMakeLists.txt  PLUGINS.md
.claude/skills/plugin-packaging/: SKILL.md
.claude/skills/plugin-packaging/references/: pkg-creation.md
.github/workflows/: build-degrain-windows.yml
ci/windows/: CMakeLists.txt
plugins/Degrain/: .continue-here.md  CMakeLists.txt  DEVELOPMENT_HISTORY.md  DEVLOG.md
plugins/Degrain/.ideas/: architecture.md  creative-brief.md  dsp-research.md  juce-api-research.md  parameter-spec.md  plan.md
plugins/Degrain/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v2-ui-test.html  v2-ui.yaml  v3-CMakeLists-SNIPPET.txt  v3-PluginEditor-TEMPLATE.cpp  v3-PluginEditor-TEMPLATE.h  v3-integration-checklist.md  v3-ui-test.html  v3-ui.html  v3-ui.yaml
plugins/Degrain/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Degrain/Source/ui/public/: index.html
plugins/Degrain/installer/windows/: degrain.iss
plugins/Fracture/: .continue-here.md  CMakeLists.txt
plugins/Fracture/.ideas/: architecture.md  creative-brief.md  dsp-research.md  juce-api-research.md  parameter-spec.md  plan.md
plugins/Fracture/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v2-ui-test.html  v2-ui.yaml  v3-CMakeLists-SNIPPET.txt  v3-PluginEditor-TEMPLATE.cpp  v3-PluginEditor-TEMPLATE.h  v3-integration-checklist.md  v3-ui-test.html  v3-ui.html  v3-ui.yaml
plugins/Fracture/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Fracture/Source/ui/public/: index.html
